优化打卡页面功能与样式

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -15,10 +15,16 @@
         bindchange="onDateChange"
         class="date-picker">
         <view class="date-display">
+          <view class="date-icon">
+            <view class="calendar-icon"></view>
+          </view>
           <text class="date-text">{{selectedDate}}</text>
         </view>
       </picker>
-      <text class="time-value" wx:if="{{isToday}}">{{currentTime}}</text>
+      <view class="time-container" wx:if="{{isToday}}">
+        <text class="time-value">{{currentTime}}</text>
+        <view class="time-pulse"></view>
+      </view>
     </view>
   </view>
 
@@ -27,7 +33,10 @@
     <view class="record-list">
       <view class="record-item">
         <view class="record-row">
-          <text class="record-label">上班时间</text>
+          <view class="record-label-container">
+            <view class="record-icon record-icon-in"></view>
+            <text class="record-label">上班时间</text>
+          </view>
           <text class="record-time">
             {{todayRecord.on || '--:--'}}
           </text>
@@ -36,7 +45,10 @@
       
       <view class="record-item">
         <view class="record-row">
-          <text class="record-label">下班时间</text>
+          <view class="record-label-container">
+            <view class="record-icon record-icon-out"></view>
+            <text class="record-label">下班时间</text>
+          </view>
           <text class="record-time">
             {{todayRecord.off || '--:--'}}
           </text>
@@ -75,7 +87,24 @@
   <!-- 提示信息 -->
   <view class="tips-section">
     <view class="tip-item">
+      <view class="tip-icon"></view>
       <text class="tip-text bold-tip">所有数据仅保存在本机，请定期导出备份</text>
+    </view>
+  </view>
+  
+  <!-- 底部导航栏 -->
+  <view class="tab-bar">
+    <view class="tab-item tab-active">
+      <view class="tab-icon tab-icon-clock"></view>
+      <text class="tab-text">打卡</text>
+    </view>
+    <view class="tab-item">
+      <view class="tab-icon tab-icon-stat"></view>
+      <text class="tab-text">统计</text>
+    </view>
+    <view class="tab-item">
+      <view class="tab-icon tab-icon-export"></view>
+      <text class="tab-text">导出</text>
     </view>
   </view>
 </view>
