--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -38,7 +38,7 @@
             <text class="record-label">上班时间</text>
           </view>
           <text class="record-time">
-            {{todayRecord.on || '--:--'}}
+            {{todayRecord.on ? todayRecord.on : '未打卡'}}
           </text>
         </view>
       </view>
@@ -50,7 +50,7 @@
             <text class="record-label">下班时间</text>
           </view>
           <text class="record-time">
-            {{todayRecord.off || '--:--'}}
+            {{todayRecord.off ? todayRecord.off : '未打卡'}}
           </text>
         </view>
       </view>
