--- a/miniprogram/pages/stat/stat.wxml
+++ b/miniprogram/pages/stat/stat.wxml
@@ -30,16 +30,16 @@
       <view wx:for="{{list}}" wx:key="date" class="record-row">
         <view class="cell-date">
           <text class="date-text">{{item.date}}</text>
-          <text class="weekday">{{item.weekday || ''}}</text>
+          <text class="weekday">{{item.weekday ? item.weekday : ''}}</text>
         </view>
         
         <view class="cell-time" bindtap="onEditTime" data-type="on" data-date="{{item.date}}">
-          <text class="time-text {{item.on ? 'has-time' : 'no-time'}}">{{item.on || '--:--'}}</text>
+          <text class="time-text {{item.on ? 'has-time' : 'no-time'}}">{{item.on ? item.on : '未打卡'}}</text>
           <text class="edit-hint" wx:if="{{item.on}}"></text>
         </view>
         
         <view class="cell-time" bindtap="onEditTime" data-type="off" data-date="{{item.date}}">
-          <text class="time-text {{item.off ? 'has-time' : 'no-time'}}">{{item.off || '--:--'}}</text>
+          <text class="time-text {{item.off ? 'has-time' : 'no-time'}}">{{item.off ? item.off : '未打卡'}}</text>
           <text class="edit-hint" wx:if="{{item.off}}"></text>
         </view>
       </view>
