--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -65,7 +65,6 @@
             hover-class="btn-hover">
       <view class="btn-content">
         <text class="btn-text">{{isToday ? '上班打卡' : '补录上班'}}</text>
-        <text class="btn-status-text" wx:if="{{todayRecord.on}}">已打卡</text>
       </view>
     </button>
     
@@ -78,8 +77,7 @@
     <block wx:else>
       <view class="custom-btn custom-btn-disabled">
         <text>{{isToday ? '下班打卡' : '补录下班'}}</text>
-        <text class="custom-btn-hint" wx:if="{{todayRecord.off}}">已打卡</text>
-        <text class="custom-btn-hint" wx:elif="{{!todayRecord.on}}">需先上班打卡</text>
+        <text class="custom-btn-hint" wx:if="{{!todayRecord.on}}">需先上班打卡</text>
       </view>
     </block>
   </view>
